welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: not found: value tailleTableau
  for(pas <-0 to tailleTableau -1){
                 ^Array1:21: error: not found: value tableau
    setCouleurBrosse(tableau(pas))
                     ^